samples/_failures_safe/1761602376_fcb769_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a11f5d2e.c: In function ‘main’:
./samples/SAFE/__tmp_a11f5d2e.c:144:12: error: missing terminating " character
  144 |     printf("WARN: %d\n
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_a11f5d2e.c:144:5: error: expected expression at end of input
  144 |     printf("WARN: %d\n
      |     ^~~~~~
./samples/SAFE/__tmp_a11f5d2e.c:144:5: error: expected declaration or statement at end of input
